--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
-    "faker": "^5.5.3",
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
+    "faker": "^5.5.3",
     "jest": "^27.0.6",
+    "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
